--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,93 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0 0;
 }
+
+.fondo {
+  background-image: url("../images/bgtile.png");
+  background-position: 0 0;
+  background-repeat: repeat-x;
+  height: 300px;
+  width: 100%;
+}
+
+.móvil {
+  width: 900px;
+  margin: 0 auto;
+  padding: 100px 0 50px 0;
+}
+.móvil img {
+  box-sizing: border-box;
+}
+.container {
+  width: 52%;
+  float: right;
+  box-sizing: border-box;
+  padding: 30px 0;
+}
+
+.logo {
+  padding-left: 5px;
+}
+
+.log-in-button {
+  text-decoration: none;
+  color: white;
+  background-color: rgb(88, 119, 151);
+  padding: 10px;
+  padding-left: 20px;
+  font-size: 14px;
+  font-weight: 700;
+  border-radius: 5%;
+  float: right;
+  margin-right: 7px;
+  margin-top: 15px;
+}
+
+.log-in-button img {
+  padding: 0 10px 0 0;
+  position: absolute;
+  right: 278px;
+  top: 165px;
+}
+
+.texto {
+  background-image: url("../images/frame.png");
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 20px 50px;
+}
+
+.texto h2 {
+  color: #06365f;
+  font-size: 29px;
+}
+
+.texto p {
+  line-height: 22px;
+}
+
+.texto img {
+  padding: 20px 10px 20px 0;
+}
+
+.Info {
+  width: 100%;
+  padding: 1px;
+  padding-top: 20px;
+  text-align: center;
+}
+
+.nav-bar-li {
+  list-style-type: none;
+  float: left;
+  padding-left: 80px;
+  color: #1c5380;
+}
+
+
+
+
