--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,87 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+/* ---- reset ---- */
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  margin: 100px 0px 0px 150px;
+}
+
+.phones {
+  margin: 0px 10px 0px 0px;
+  float: left;
+}
+
+.top-box {
+  width: 45%;
+  height: 90px;
+  float: right;
+  margin-right: 150px;
+}
+
+.login {
+  border: 1px solid darkblue;
+  border-radius: 20px;
+  width: 100px;
+  height: 70px;
+  float: right;
+}
+
+.logo {
+  float: right;
+}
+
+.white {
+  color: white;
+}
+
+.main-box {
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-position-x: 0px;
+  width: 50%;
+  float: right;
+  margin-right: 120px; 
+  margin-bottom: 110px;
+  
+}
+
+.blue-text {
+  color: darkblue;
+}
+
+.right-tag {
+  margin-left: 30px;
+}
+
+.left-tag {
+  margin-left: 50px;
+}
+
+.bottom-box {
+  float: right;
+  margin-right: 200px;
+  margin-left: 100px;
+}
+
+.light-blue {
+  color: lightblue;
+  float: right;
+}
+
+.light-grey {
+  color: lightgray;
+  float: right;
+}
+
+.text {
+  margin: 20px 100px 40px 40px;
 }
