--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -90,6 +90,8 @@ body {
   color: white;
   border-color: #003569;
   vertical-align: middle;
+  margin: 20px 10px 20px 0px;
+  float: right;
   
 }
 
