--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,73 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x; 
+}
+
+.main {
+  padding: 40px 100px;
+}
+
+
+#iPhone {
+  display: block;
+  position: cover;
+  width: 33%;
+  float: left;
+}
+
+button {
+  background-color: #1c5380;
+  float: right;
+  position: relative;
+  vertical-align: middle;
+}
+#text-box {
+  margin-left: 20px;
+  padding: 10px;
+}
+
+#text {
+  display: inline-block;
+  border-radius: 15px;
+  width: 55%;
+  background-color: #FFF;
+  vertical-align: middle;
+  padding: 30px;
+  text-align: left;
+}
+
+#text-box h1{
+  color: #06365F;
+}
+
+ul {
+  display: block;
+  float: left;
+  padding: 15px 40px;
+  margin: 0 20px 0 0;
+  margin: 0 10px;
+  text-align: center;
+  width:80%;
+  color: #1c5380;
+  text-decoration: none;
+  list-style-type: none;
+}
+
+li a {
+  display: inline-block;
+  margin-left: 5px;
+  position: absolute;
+  color: #1c5380;
+  text-decoration: none;
+  list-style-type: none;
+  text-transform: uppercase;
+}
+
+#copyright {
+  position: relative;
+  float: left;
+  color: lightgrey;
+  margin-left: 15px;
 }
