--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,22 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+/*
+Colors to use:
+dark blue: #06365f
+light blue: #1c5380
+*/
+*{
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+ }
+ 
+body {
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  background-size: 300px 400px;
+ 
+}
