--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,125 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+html{
+  margin: 0;
+  padding: 0; 
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: white;
+  padding: 0; 
+}
+
+h5{
+  color: RGB(60,105,150);
+}
+
+header{
+  height: 250px;
+  width:100%;
+  background-image: url("../images/bgtile.png");
+  background-size: cover;
+  box-sizing: border-box;
+}
+#topDiv{
+  height: 80px;
+  width: 500px;
+  float: left; 
+  margin-left: 45%;
+  margin-top: 100px;
+}
+header div img{
+  float: left; 
+}
+#loginButton{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 50px;
+  width: 100px;
+  float: left; 
+  margin-left: 60px;
+  margin-top: 15px;
+  padding-left: 10px;
+  padding-top: 10px;
+  box-sizing: border-box;
+  border-style: solid;
+  border-color: block;
+  border-width: 1px;
+  border-radius: 3px;
+  position: relative;
+  top: -5px;
+}
+#loginButton img{
+  margin: 5px;
+}
+
+h2{
+  margin:0;
+  color: RGB(60,105,150);
+}
+
+#loginButton h5{
+  margin-top: 7px;
+}
+section{
+  height: 400px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+#phoneImg{
+  float: left;
+  position: relative;
+  top: -120px;
+  left: 50px;  
+}
+article{
+  background-image: url("../images/frame.png");
+  background-size: 450px;
+  background-repeat: no-repeat;
+  width: 450px;
+  margin: 0;
+  float: left;
+  position: relative;
+  top: -55px;
+  left: 12%;
+  padding: 30px;
+  box-sizing: border-box;
+}
+
+footer{
+  width: 100%;
+  height: 50px;
+  position: relative;
+  top: -80px;
+}
+
+footer ul{
+  list-style: none;
+  height: 10px;
+  width: 800px;
+  margin: auto;
+}
+
+footer ul li{
+  float: left;
+  margin-left: 20px;
+  color: RGB(60,105,150);
+}
+
+
+#getAppsDiv img{
+  margin-left: 20px;
+}
+
+.clear{
+  clear: both;
+  height: 0;
+}
+
+#grayLi{
+  color: gray;
 }
