--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,84 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.topDiv{
+  background-color:#1c5380;
+  color:white;
+  height:250px;
+  width:100%;
+}
+
+.bottomDiv{
+  background-color:white;
+color:black;
+width: 100%;
+margin-left: 100px;
+}
+
+
+.phone-div{
+float:left;
+position: relative;
+bottom: 100px;
+width:260px;
+}
+.phone-pic{
+width: 230px;
+height: auto;
+}
+
+.right-side{
+  float:left;
+  position: relative;
+  bottom: 130px;
+  width:360px;
+}
+.logo-div{
+  background-color:#1c5380;
+  padding-left:10px;
+}
+.login-button{
+  color:white;
+  background-color:#1c5380;
+  margin-top:10px;
+  float: right;
+}
+
+.login-container{
+  float:right;
+}
+.instagram-brand{
+  width: 220px;
+  height: auto;
+  float:left;
+}
+.clear-fix{
+  clear:both;
+}
+.capture-blurb{
+background-image: url(../images/frame.png);
+background-size: cover;
+background-blend-mode: color;
+background-repeat:no-repeat;
+width:320px;
+padding: 15px 35px;
+font-size: 12px;
+}
+
+.capture-blurb h2 {
+  color:#06365f;
+  width: 220px;
+  font-size: 20px;
+}
+.app-logos{
+  margin-top:30px;
+}
+.apple-pic{
+  float:left;
+}
+
+.very-end{
+  clear:both;
+  width: 800px;
+  margin: auto;
+}
