It's better but the home button, text box, and the viewing box has issues but it would easily be under plagiarism if brought to a court of law.

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -46,6 +46,7 @@ td {
 .bottom-bar {
     float: bottom;
     position: relative;
+    top: -50px;
     right: 150px;
 }
 
@@ -61,4 +62,8 @@ td {
     float: left;
     top: -200px;
     left: 200px;
+}
+
+.top-bar image {
+    padding-left: 10px;
 }
