--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,33 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 15px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+.header {
+  background-color: #1c5380;
+  height:300px;
+  width:100%;
+  position: absolute;
+}
+.texto {
+  height:200px;
+  width:30%;
+  background-color: white;
+  position: fixed;
+  margin-top: 180px;
+  margin-left: 600px;
+
+}
+
+.footer {
+  background: white;
+  clear: both;
+  width:170%;
+  margin-top: 100px;
+  float:right;
+
+
+
+
 }
