--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,73 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+/* ---- reset ---- */
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x; 
 }
+.container{
+  width: 80%;
+  margin: 0 auto;
+  padding: 80px;
+}
+
+.main-section{
+  overflow: hidden;  
+}
+.main-article{
+  width: 50%;
+  float: left;
+  padding: 10px;
+
+}
+
+article{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.article-section{
+  padding: 20px;
+}
+h1{
+  color:  #06365f;
+}
+
+header{
+  padding: 20px;
+}
+
+.download-images img{
+  display: block;
+  float: left;
+  padding: 20px;
+}
+li{
+  text-align: center;
+  color: #1c5380;
+  float: left;
+  list-style-type: none;
+  margin: 10px;
+  text-decoration-style: solid;
+}
+
+
+
