--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,114 @@
+/*div, section, header, nav,img {
+  border: 1px solid red;
+}*/
+
 /*
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
 
+/* ---- reset ---- */
+
+html {
+  box-sizing: border-box;
+}
+
+*,* :before, *:after {
+  box-sizing: inherit;
+} 
+ 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;  
   margin: 0;
+  padding: 0;
+  background: url(../images/bgtile.png) repeat-x;
+}
+
+h2 {
+  color: #06365f;
+}
+
+.container {
+  width: 80%;
+  margin: 0 auto;    
+}
+
+.main-pic {
+  float: left;
+}
+
+.main-content {
+  float: left;
+  width: 50%;
+  margin-left: 50px;
+}
+
+.main-text {
+  background: url(../images/frame.png) no-repeat;
+  padding: 20px;
+}
+
+.main-text img {
+  margin-right: 15px;
+}
+
+.main-header  {  
+  overflow: hidden;  
+}
+
+.main-header img {
+  display: block;
+  float: left;
+}
+
+.main-header button {
+  float: right;
+  margin: 15px;
+}
+
+.clearfix {
+  clear: both;
+}
+
+.btn {
+  background: #70a0c7;
+  background-image: -webkit-linear-gradient(top, #70a0c7, #3771a1);
+  background-image: -moz-linear-gradient(top, #70a0c7, #3771a1);
+  background-image: -ms-linear-gradient(top, #70a0c7, #3771a1);
+  background-image: -o-linear-gradient(top, #70a0c7, #3771a1);
+  background-image: linear-gradient(to bottom, #70a0c7, #3771a1);
+  -webkit-border-radius: 3;
+  -moz-border-radius: 3;
+  border-radius: 3px;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.footer-nav ul {
+  text-align: center;
+}
+
+.footer-nav li {
+  display: inline-block;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: -1px;
+  color: #06365f;
+  margin: 10px;
+}
+
+.footer-nav span {
+  font-weight: bold;
+  color: grey;
+}
+
+.main-padding {
+  padding: 100px;
 }
