--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,35 @@ light blue: #1c5380
 */
 
 body {
+  background: url("../images/bgtile.png") repeat-x;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+div {
+  padding:5% 15% 5% 15%;
+}
+
+.main-photo {
+  width: 50%;
+  float:left;
+}
+
+.brand {
+  width: 50%;
+  float:left;
+}
+
+.info {
+  width: 50%;
+  float:left;
+}
+
+.menu {
+  width: 100%;
+}
+
+.menu-item {
+  width: 12.5%;
+  float: left;
 }
